[project]
name = "chatgpt-link-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "nitin",email = "nitinnataraj93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "markdownify (>=1.1.0,<2.0.0)",
    "playwright (>=1.53.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
